--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
+        android:name=".application.MovieApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -25,6 +26,12 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.mladenbabic.popularmovies.activity.MainActivity" />
         </activity>
+
+        <provider
+            android:name=".provider.FavoriteMovieContentProvider"
+            android:authorities="${applicationId}.provider"
+            android:exported="false"/>
+
     </application>
 
 </manifest>
